<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/header_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.34" />

                <Button
                    android:id="@+id/confirm_registration_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="launchRegisterConfirm"
                    android:text="@string/next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header_register"
                    app:layout_constraintVertical_bias="0.872" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="214dp"
                    android:orientation="vertical"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.615">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/team_name"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/team_name_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/team_name"
                            android:inputType="text"
                            android:textColorHint="#78909C"
                            android:importantForAutofill="no" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/team_level"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/seekbar_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:textSize="20sp"
                            android:text="@string/num_0" />

                        <SeekBar
                            android:id="@+id/seekbar_team_level"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_weight="2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/receive_emails"
                            android:textSize="20sp" />

                        <RadioGroup
                            android:id="@+id/radio_emails"
                            android:layout_width="191dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_yes"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/yes"
                                android:textSize="20sp"></RadioButton>

                            <Space
                                android:layout_width="20dp"
                                android:layout_height="match_parent"></Space>

                            <RadioButton
                                android:id="@+id/radio_no"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/no"
                                android:textSize="20sp">

                            </RadioButton>
                        </RadioGroup>


                    </LinearLayout>
                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/agree_disagree_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/is_agree"
                    app:layout_constraintBottom_toTopOf="@+id/confirm_registration_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="0.73" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_nav_menu">

        </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>